# Cupel

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md  bootstrap.cmd  bootstrap.ps1
core/cupel-core/: Cargo.toml  README.md
core/cupel-core/src/: envelope.rs  lib.rs  message.rs  preflight.rs  solana_rpc.rs  token.rs  transport.rs  verdict.rs
demo/: RECORD_THIS.md  build_approve.py  build_demo.py
design/: verdict-spec.md
spike/cupel-spike/: Cargo.toml  RUN.md  manifest.toml
spike/cupel-spike/src/: lib.rs  rpc.rs
