[package]
name = "cupel-core"
version = "0.1.1"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
description = "Solana transaction effect verification for wasm32-wasip2 agent plugins: decode, simulate, diff, and render what a transaction will actually do."
repository = "https://github.com/ace-coderr/Cupel"
keywords = ["solana", "wasm", "wasi", "agent", "security"]
categories = ["cryptography::cryptocurrencies", "wasm"]
readme = "README.md"

# Published to crates.io rather than shared by path: the plugins CI snapshots
# only `plugins/<name>` and `wit/v0` before building, so a path dependency
# would point at a directory that does not exist in the build sandbox.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

[dev-dependencies]
# Nothing. Tests use the in-crate mock transport; no live network, ever.

[profile.release]
opt-level = "s"
lto = true

